--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
-project=django_deploy
+project=maple_web
 uid=www-data
 gid=www-data
-base=/var/www/html
+base=/var/maple_web
 
 chdir=%(base)/%(project)
 module=%(project).wsgi:application
