修改docker配置名稱

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
-project=maple_web
+project=Maple
 uid=www-data
 gid=www-data
-base=/var/maple_web
+base=/var/Maple
 
 chdir=%(base)/%(project)
 module=%(project).wsgi:application
