--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -2,7 +2,7 @@
 project=Maple
 uid=www-data
 gid=www-data
-base=/var/Maple
+base=/var/Maple_web
 
 chdir=%(base)/%(project)
 module=%(project).wsgi:application
