--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ Pillow==7.1.2
 django-environ==0.8.1
 django-simpleui==2022.1
 django-simple-history==3.0.0
+gunicorn==20.1.0
+django-heroku==0.3.1
