--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 asgiref==3.5.0
 Django==3.2.11
-pytz==2021.3
-sqlparse==0.4.2
-typing-extensions==4.0.1
-uwsgi==2.0.18
-mysqlclient==1.4.6
-django-redis==4.11.0
-redis==3.5.0
-Pillow==7.1.2
+django-cors-headers==3.7.0
 django-environ==0.8.1
+django-heroku==0.3.1
+django-redis==4.11.0
 django-simpleui==2022.1
 django-simple-history==3.0.0
 gunicorn==20.1.0
-django-heroku==0.3.1
+mysqlclient==1.4.6
+Pillow==7.1.2
+psycopg2==2.9.3
+pytz==2021.3
+redis==3.5.0
+sqlparse==0.4.2
+typing-extensions==4.0.1
+uwsgi==2.0.18
