--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.13.1
 django-cors-headers==3.7.0
 django-environ==0.8.1
 django-extensions==3.1.5
+django-filter==21.1
 django-heroku==0.3.1
 django-redis==4.11.0
 django-simpleui==2022.1
