--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,6 +13,10 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.7]
+    service:
+      mysql:
+        image: mysql:5.7
+        port: ['3305:3305']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
