--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.7]
-    service:
+    services:
       mysql:
         image: mysql:5.7
         port: ['3305:3305']
