--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,7 +16,7 @@ jobs:
     services:
       mysql:
         image: mysql:5.7
-        port: ['3305:3305']
+        ports: ['3305:3305']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
