--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,6 +16,11 @@ jobs:
     services:
       mysql:
         image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: 123456
+          MYSQL_DATABASE: maple
+          MYSQL_USER: dbuser
+          MYSQL_PASSWORD: riu405405
         ports: ['3305:3305']
     steps:
     - uses: actions/checkout@v2
