--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,6 +22,7 @@ jobs:
           MYSQL_USER: dbuser
           MYSQL_PASSWORD: riu405405
         ports: ['3305:3305']
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
