--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -18,7 +18,7 @@ jobs:
         image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: 123456
-          MYSQL_DATABASE: maple
+          MYSQL_DATABASE: test_maple
           MYSQL_USER: dbuser
           MYSQL_PASSWORD: riu405405
         ports:
