--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,6 +34,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Add test Database
+      run: |
+        mysql -u root -p 123456 -e 'CREATE DATABASE IF NOT EXISTS test_maple;'
     - name: Run Tests
       run: |
         python manage.py test
