--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -36,7 +36,7 @@ jobs:
         pip install -r requirements.txt
     - name: Add test Database
       run: |
-        mysql -u root -p 123456 -e 'CREATE DATABASE IF NOT EXISTS test_maple;'
+        mysql -uroot -h127.0.0.1 -p123456 -e 'CREATE DATABASE IF NOT EXISTS test_maple;'
     - name: Run Tests
       run: |
         python manage.py test
