--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -39,6 +39,6 @@ jobs:
         mysql -uroot -h127.0.0.1 -p123456 -e 'CREATE DATABASE IF NOT EXISTS test_maple;'
     - name: Run Tests
       run: |
-        python manage.py test
+        python manage.py test --noinput
       env:
         DEBUG: False
