--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,14 +20,14 @@ spec:
           secretName: gs-credentials
       containers:
       - name: api
-        image: asia.gcr.io/k8s-demo-342604/server
+        image: asia.gcr.io/k8s-demo-342604/maple_server
         imagePullPolicy: Always
-        command: ['gunicorn', 'web.wsgi:application', '-b', '0.0.0.0:8000']
+        command: ['gunicorn', 'Maple.wsgi:application', '-b', '0.0.0.0:8000']
         ports:
         - containerPort: 8000
         readinessProbe:
           httpGet:
-            path: /health
+            path: /admin
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 10
@@ -36,7 +36,7 @@ spec:
             name: gs-credentials
         env:
         - name: STATIC_URL
-          value: https://storage.googleapis.com/k8s-demo/static/
+          value: https://storage.googleapis.com/maple-bucket/static/
         - name: DATABASE_HOST
           value: 10.122.192.3
         - name: DATABASE_PORT
@@ -51,6 +51,8 @@ spec:
               name: dbpassword
               key: DATABASE_PASSWORD
         - name: GS_BUCKET_NAME
-          value: k8s-demo
+          value: maple-bucket
         - name: DJANGO_SETTINGS_MODULE
           value: Maple.settings.gcp
+        - name: SECRET_KEY
+          value: gkWgUQjMiMQEEkqVH3LPmMAdMHdd4FFYltlLHiyWf1A=
