--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ django-redis==4.11.0
 django-simpleui==2022.1
 django-simple-history==3.0.0
 gunicorn==20.1.0
+google==3.0.0
+google-cloud-storage==1.30.0
 mysqlclient==1.4.6
 Pillow==7.1.2
 psycopg2==2.9.3
@@ -18,4 +20,3 @@ pytz==2021.3
 redis==3.5.0
 sqlparse==0.4.2
 typing-extensions==4.0.1
-uwsgi==2.0.18
