--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -9,6 +9,12 @@ spec:
   selector:
     matchLabels:
         app: api
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+  minReadySeconds: 10
   template:
     metadata:
       labels:
