--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: dbpassword
+  name: django-secret
 data:
   DATABASE_PASSWORD: NmxnTTB1ekZhRDZtUGdpaQ==
+  SECRET_KEY: gkWgUQjMiMQEEkqVH3LPmMAdMHdd4FFYltlLHiyWf1A=
+  DATABASE_HOST: 10.82.240.3
 
 ---
 apiVersion: v1
