把敏感資料base64加密

--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -4,8 +4,8 @@ metadata:
   name: django-secret
 data:
   DATABASE_PASSWORD: NmxnTTB1ekZhRDZtUGdpaQ==
-  SECRET_KEY: gkWgUQjMiMQEEkqVH3LPmMAdMHdd4FFYltlLHiyWf1A=
-  DATABASE_HOST: 10.82.240.3
+  SECRET_KEY: Z2tXZ1VRak1pTVFFRWtxVkgzTFBtTUFkTUhkZDRGRllsdGxMSGl5V2YxQT0=
+  DATABASE_HOST: MTAuODIuMjQwLjM=
 
 ---
 apiVersion: v1
