--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-heroku==0.3.1
 django-redis==4.11.0
 django-simpleui==2022.1
 django-simple-history==3.0.0
+django-storages[google]==1.12.3
 gunicorn==20.1.0
 google==3.0.0
 google-cloud-storage==1.30.0
