--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-simple-history==3.0.0
 django-storages[google]==1.12.3
 gunicorn==20.1.0
 google==3.0.0
+google-cloud-logging==3.0.0
 google-cloud-storage==1.30.0
 mysqlclient==1.4.6
 Pillow==7.1.2
