--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.0
+certifi==2020.6.20
 Django==3.2.11
 data-spec-validator==1.5.0
 djangorestframework==3.13.1
@@ -10,12 +11,14 @@ django-heroku==0.3.1
 django-redis==4.11.0
 django-simpleui==2022.1
 django-simple-history==3.0.0
+django-storages[google]==1.12.3
 gunicorn==20.1.0
+google==3.0.0
+google-cloud-logging==3.0.0
+google-cloud-storage==1.30.0
 mysqlclient==1.4.6
 Pillow==7.1.2
-psycopg2==2.9.3
 pytz==2021.3
 redis==3.5.0
 sqlparse==0.4.2
 typing-extensions==4.0.1
-uwsgi==2.0.18
