--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-redis==4.11.0
 django-simpleui==2022.1
 django-simple-history==3.0.0
 django-storages[google]==1.12.3
+djangorestframework-simplejwt==5.1.0
 gunicorn==20.1.0
 google==3.0.0
 google-cloud-logging==3.0.0
