--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,6 +37,8 @@ jobs:
     - name: Add test Database
       run: |
         mysql -uroot -h127.0.0.1 -p123456 -e 'CREATE DATABASE IF NOT EXISTS test_maple;'
+    - name: Run migrations
+        run: python manage.py migrate
     - name: Run Tests
       run: |
         python manage.py test --noinput
