--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,9 +42,8 @@ jobs:
         pip install -r requirements.txt
     - name: Add test Database
       run: |
-        mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}'
-        CREATE DATABASE IF NOT EXISTS '${{ env.DB_NAME }}';
-        GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.dbuser }}@"%" IDENTIFIED BY '${{ env.DB_PASSWORD }}';
+        mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "CREATE DATABASE IF NOT EXISTS '${{ env.DB_NAME }}';"
+        mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.dbuser }}@"%" IDENTIFIED BY '${{ env.DB_PASSWORD }}';"
     - name: Run migrations
       run: python manage.py migrate
       env:
