--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,13 +2,19 @@ name: Django CI
 
 on:
   push:
-    branches: [ feature.master.exchange_ci_pipeline ]
+    branches: [ feature.master.fix_product_maple_capability_column ]
   pull_request:
     branches: [ master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DEBUG: False
+      DB_NAME: test_maple
+      DB_USER: dbuser
+      DB_PASSWORD: riu405405
+      ROOT_PASSWORD: 123456
     strategy:
       max-parallel: 4
       matrix:
@@ -17,10 +23,10 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD: 123456
-          MYSQL_DATABASE: test_maple
-          MYSQL_USER: dbuser
-          MYSQL_PASSWORD: riu405405
+          MYSQL_ROOT_PASSWORD: ${{ env.ROOT_PASSWORD }}
+          MYSQL_DATABASE: ${{ env.DB_NAME }}
+          MYSQL_USER: ${{ env.DB_USER }}
+          MYSQL_PASSWORD: ${{ env.DB_PASSWORD }}
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
@@ -36,10 +42,14 @@ jobs:
         pip install -r requirements.txt
     - name: Add test Database
       run: |
-        mysql -uroot -h127.0.0.1 -p123456 -e 'CREATE DATABASE IF NOT EXISTS test_maple;'
-    - name: Run Tests
-      run: |
-        python manage.py test --noinput
+        mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
+        mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.dbuser }}@"%" IDENTIFIED BY ${{ env.DB_PASSWORD }};
+    - name: Run migrations
+      run: python manage.py migrate
       env:
-        DEBUG: False
+        DEBUG: ${{ env.DEBUG }}
+    - name: Run Tests
+      run: python manage.py test --noinput
+      env:
+        DEBUG: ${{ env.DEBUG }}
 
