--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,11 @@ django-heroku==0.3.1
 django-redis==4.11.0
 django-simpleui==2022.1
 django-simple-history==3.0.0
-django-storages[google]==1.12.3
+django-gcloud-storage==0.5.0
 djangorestframework-simplejwt==5.1.0
 gunicorn==20.1.0
 google==3.0.0
-google-cloud-logging==3.0.0
-google-cloud-storage==1.30.0
+google-auth==2.6.6
 mysqlclient==1.4.6
 Pillow==7.1.2
 pytz==2021.3
