--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ django-simpleui==2022.1
 django-simple-history==3.0.0
 django-gcloud-storage==0.5.0
 djangorestframework-simplejwt==5.1.0
+gevent==1.1.2
+gevent-websocket==0.9.3
 gunicorn==20.1.0
 google==3.0.0
 google-auth==2.6.6
