--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     volumes:
       - .:/var/Maple
       - media_vol:/var/Maple/media
-      - ./compose/uwsgi:/tmp
+      - ./compose/web:/tmp
     links:
       - mysql
       - redis
