--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -20,12 +20,13 @@ server {
     }
 
     location / {
-        include /etc/nginx/uwsgi_params;
-        uwsgi_pass django;
-        uwsgi_read_timeout 600;
-        uwsgi_connect_timeout 600;
-        uwsgi_send_timeout 600;
+//        include /etc/nginx/uwsgi_params;
+//        uwsgi_pass django;
+//        uwsgi_read_timeout 600;
+//        uwsgi_connect_timeout 600;
+//        uwsgi_send_timeout 600;
 
+        proxy_pass http://127.0.0.1:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
