--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -36,14 +36,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+#      - name: Install Dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt
       - name: Add test Database
         run: |
+          mysql -u root -h 127.0.0.1 -p '${{ env.ROOT_PASSWORD }}' -e "SELECT VERSION();SELECT NOW()"
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
-          mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e 'GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.dbuser }}@"%" IDENTIFIED BY ${{ env.DB_PASSWORD }}';
+          mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e 'GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.dbuser }}@"%" IDENTIFIED BY ${{ env.DB_PASSWORD }}'
       - name: Run migrate
         run: python manage.py migrate
         env:
