--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "SELECT VERSION();SELECT NOW()"
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};"
-          mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e 'GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.dbuser }}@"%" IDENTIFIED BY ${{ env.DB_PASSWORD }}'
+          mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.dbuser }}@'%' IDENTIFIED BY ${{ env.DB_PASSWORD }};"
       - name: Run migrate
         run: python manage.py migrate
         env:
