--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -43,8 +43,9 @@ jobs:
       - name: Add test Database
         run: |
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
-          SELECT VERSION();SELECT NOW();
+          SELECT VERSION();
           CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};
+          SELECT NOW();
           "
 #          mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.dbuser }}@localhost IDENTIFIED BY ${{ env.DB_PASSWORD }};"
       - name: Run migrate
