--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -48,7 +48,7 @@ jobs:
           SELECT NOW();
           CREATE USER ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
           SELECT NOW();
-          select host, user, password from mysql.user;
+          select host, user from mysql.user;
           SELECT NOW();
           "
 #          mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.dbuser }}@localhost IDENTIFIED BY ${{ env.DB_PASSWORD }};"
