--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,11 +42,11 @@ jobs:
 #          pip install -r requirements.txt
       - name: Add test Database
         run: |
-          mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
+          mysql -uroot -h127.0.0.1 -p`${{ env.ROOT_PASSWORD }}` -e "
           CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};
-          CREATE USER ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
+          CREATE USER ${{ env.DB_USER }}@`localhost` IDENTIFIED BY `${{ env.DB_PASSWORD }}`;
           select host, user from mysql.user;
-          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
+          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@`localhost` IDENTIFIED BY `${{ env.DB_PASSWORD }}`;
           SELECT NOW();
           "
 #      - name: Run migrate
