--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -46,7 +46,7 @@ jobs:
           CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};
           CREATE USER ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
           select host, user from mysql.user;
-          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
+          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost';
           SELECT NOW();
           "
 #      - name: Run migrate
