--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -32,14 +32,14 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - uses: actions/checkout@v3
-#      - name: Set up Python ${{ matrix.python-version }}
-#        uses: actions/setup-python@v4
-#        with:
-#          python-version: ${{ matrix.python-version }}
-#      - name: Install Dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install -r requirements.txt
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Add test Database
         run: |
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
@@ -49,12 +49,12 @@ jobs:
           GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost';
           SELECT NOW();
           "
-#      - name: Run migrate
-#        run: python manage.py migrate
-#        env:
-#          DEBUG: ${{ env.DEBUG }}
-#      - name: Run Tests
-#        run: python manage.py test --noinput
-#        env:
-#          DEBUG: ${{ env.DEBUG }}
+      - name: Run migrate
+        run: python manage.py migrate
+        env:
+          DEBUG: ${{ env.DEBUG }}
+      - name: Run Tests
+        run: python manage.py test --noinput
+        env:
+          DEBUG: ${{ env.DEBUG }}
 
