--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,10 +44,10 @@ jobs:
         run: |
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
           CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};
-          CREATE USER ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
+          CREATE USER ${{ env.DB_USER }}@'%' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
           select host, user from mysql.user;
-          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost';
-          SELECT NOW();
+          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'%';
+          FLUSH PRIVILEGES;
           "
       - name: Run migrate
         run: python manage.py migrate
