--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -43,11 +43,12 @@ jobs:
       - name: Add test Database
         run: |
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
-          CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};
-          CREATE USER ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
-          select host, user from mysql.user;
-          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost';
-          FLUSH PRIVILEGES;
+               ALTER USER django CREATEDB;
+#          CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};
+#          CREATE USER ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
+#          select host, user from mysql.user;
+#          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost';
+#          FLUSH PRIVILEGES;
           "
       - name: Run migrate
         run: python manage.py migrate
