--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -36,26 +36,27 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+#      - name: Install Dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt
       - name: Add test Database
         run: |
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
-           ALTER USER ${{ env.DB_USER }} CREATEDB;
+            CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};
+            CREATE USER ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
+            select host, user from mysql.user;
+            GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost';
+            SHOW DATABASES;
+            FLUSH PRIVILEGES;
           "
-#          CREATE DATABASE IF NOT EXISTS ${{ env.DB_NAME }};
-#          CREATE USER ${{ env.DB_USER }}@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';
-#          select host, user from mysql.user;
-#          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost';
-#          FLUSH PRIVILEGES;
-      - name: Run migrate
-        run: python manage.py migrate
-        env:
-          DEBUG: ${{ env.DEBUG }}
-      - name: Run Tests
-        run: python manage.py test --noinput
-        env:
-          DEBUG: ${{ env.DEBUG }}
+#          ALTER USER ${{ env.DB_USER }} CREATEDB;
+#      - name: Run migrate
+#        run: python manage.py migrate
+#        env:
+#          DEBUG: ${{ env.DEBUG }}
+#      - name: Run Tests
+#        run: python manage.py test --noinput
+#        env:
+#          DEBUG: ${{ env.DEBUG }}
 
