--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,14 +45,14 @@ jobs:
         run: |
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
           CREATE DATABASE IF NOT EXISTS ${{ env.TEST_DB_NAME }};
-          SHOW DATABASES;
-          select host, user from mysql.user;
           CREATE USER ${{ env.DB_USER }}@`%` IDENTIFIED BY '${{ env.DB_PASSWORD }}';
+          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@`%`;
           select host, user from mysql.user;
+          FLUSH PRIVILEGES;
           "
+#          SHOW DATABASES;
 #          select host, user from mysql.user;
-#          GRANT ALL PRIVILEGES ON ${{ env.DB_NAME }}.* TO ${{ env.DB_USER }}@'localhost';
-#          FLUSH PRIVILEGES;
+
 #      - name: Run migrate
 #        run: python manage.py migrate
 #        env:
