--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,10 +37,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-#      - name: Install Dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Add test Database
         run: |
           mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
@@ -53,12 +53,12 @@ jobs:
 #          SHOW DATABASES;
 #          select host, user from mysql.user;
 
-#      - name: Run migrate
-#        run: python manage.py migrate
-#        env:
-#          DEBUG: ${{ env.DEBUG }}
-#      - name: Run Tests
-#        run: python manage.py test --noinput
-#        env:
-#          DEBUG: ${{ env.DEBUG }}
+      - name: Run migrate
+        run: python manage.py migrate
+        env:
+          DEBUG: ${{ env.DEBUG }}
+      - name: Run Tests
+        run: python manage.py test --noinput
+        env:
+          DEBUG: ${{ env.DEBUG }}
 
