--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Django CICD
 
 on:
   push:
@@ -58,23 +58,8 @@ jobs:
 #        env:
 #          DEBUG: ${{ env.DEBUG }}
 
----
-
-name: CD
-
-on:
-  workflow_run:
-    workflows: [ CI ]
-    types:
-      - completed
-
-jobs:
   deploy:
+    needs: tests
     runs-on: ubuntu-latest
-    # 注意前面 workflow_run 的 completed 意思是「完成」，不論執行結果成功或是失敗都算是「完成」
-    # 但是一般來說測試如果失敗就應該暫停部屬至正式環境
-    # 因此這裡加上一個 if 判斷，只有 CI 成功才會執行此 workflow
-    # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#workflow_run
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - run: echo "tests workflow is ${{ github.event.workflow_run.conclusion }}"
