--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,7 +1,7 @@
 name: Django CICD
 
 on:
-  pull_request:
+  push:
     branches: [ master ]
 
 jobs:
@@ -33,37 +33,39 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - run: echo "test ci success"
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Add test Database
-        run: |
-          mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
-          CREATE DATABASE IF NOT EXISTS ${{ env.TEST_DB_NAME }};
-          CREATE USER ${{ env.DB_USER }}@`%` IDENTIFIED BY '${{ env.DB_PASSWORD }}';
-          GRANT ALL PRIVILEGES ON ${{ env.TEST_DB_NAME }}.* TO ${{ env.DB_USER }}@`%`;
-          select host, user from mysql.user;
-          FLUSH PRIVILEGES;
-          "
-#          SHOW DATABASES;
+#      - name: Install Dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt
+#      - name: Add test Database
+#        run: |
+#          mysql -uroot -h127.0.0.1 -p'${{ env.ROOT_PASSWORD }}' -e "
+#          CREATE DATABASE IF NOT EXISTS ${{ env.TEST_DB_NAME }};
+#          CREATE USER ${{ env.DB_USER }}@`%` IDENTIFIED BY '${{ env.DB_PASSWORD }}';
+#          GRANT ALL PRIVILEGES ON ${{ env.TEST_DB_NAME }}.* TO ${{ env.DB_USER }}@`%`;
 #          select host, user from mysql.user;
-      - name: Run migrate
-        run: python manage.py migrate
-        env:
-          DEBUG: ${{ env.DEBUG }}
-      - name: Run Tests
-        run: python manage.py test --noinput
-        env:
-          DEBUG: ${{ env.DEBUG }}
+#          FLUSH PRIVILEGES;
+#          "
+##          SHOW DATABASES;
+##          select host, user from mysql.user;
+#      - name: Run migrate
+#        run: python manage.py migrate
+#        env:
+#          DEBUG: ${{ env.DEBUG }}
+#      - name: Run Tests
+#        run: python manage.py test --noinput
+#        env:
+#          DEBUG: ${{ env.DEBUG }}
 
   deploy:
     name: Deploy Django
+    environment: 'prod'
     needs: tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - run: echo "deploy to fly"
+#      - run: flyctl deploy --remote-only
+#        env:
+#          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
