--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,11 +1,12 @@
 name: Django CICD
 
 on:
-  pull_request:
+  push:
     branches: [ master ]
 
 jobs:
   tests:
+    name: CI tests
     runs-on: ubuntu-latest
     env:
       DEBUG: False
@@ -32,7 +33,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      - run: echo "test ci success"
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -56,9 +56,11 @@ jobs:
         run: python manage.py test --noinput
         env:
           DEBUG: ${{ env.DEBUG }}
+      - run: echo "test ci success"
 
   deploy:
-    name: Deploy Django
+    name: Deploy Django to Fly.io
+    environment: 'prod'
     needs: tests
     runs-on: ubuntu-latest
     steps:
@@ -67,3 +69,4 @@ jobs:
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - run: echo "deploy to fly"
