Add redis server test

--- a/fly.toml
+++ b/fly.toml
@@ -7,9 +7,7 @@ processes = []
 
 [env]
   PORT = "8080"
-  CACHE_DRIVER="redis"
-  REDIS_URL="redis://default:cc0858f6aefa41af920ad707a9fb7af8@fly-maple_redis.upstash.io"
-  REDIS_CACHE_DB=0
+  FLY_REDIS_PASSWORD="cc0858f6aefa41af920ad707a9fb7af8"
 
 [experimental]
   allowed_public_ports = []
