--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,7 @@ processes = []
 
 [env]
   PORT = "8080"
+  FLY_REDIS_PASSWORD="cc0858f6aefa41af920ad707a9fb7af8"
 
 [experimental]
   allowed_public_ports = []
