Test mysql master and slave

--- a/compose/mysql2/conf/my.cnf
+++ b/compose/mysql2/conf/my.cnf
@@ -3,7 +3,7 @@ user=mysql
 default-storage-engine=INNODB
 character-set-server=utf8
 
-port            = 3305 # 端口与docker-compose里映射端口保持一致
+port            = 3304 # 端口与docker-compose里映射端口保持一致
 #bind-address = localhost #一定要注释掉，mysql所在容器和django所在容器不同IP
 
 basedir         = /usr
@@ -21,11 +21,8 @@ default-character-set=utf8
 no-auto-rehash
 default-character-set=utf8
 
-# 在這裡設定已蓋過預設的127.0.0.1(只能連本機)
-bind-address = 0.0.0.0
+#注意：不可與剛剛設定的 Master 重複
+server-id=2
 
-# id為唯一值，每個server不可重覆
-server-id = 1
-
-# 指定產生bin log檔案名稱，使MySQL記錄所有DB交易記錄
-log-bin=mysql-bin
+#Slave server 的 DB 開啟唯獨避免被寫入
+read-only=on
