--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 volumes:
   mysql_vol:
+  mysql_vol2:
   redis_vol:
   media_vol:
 
@@ -29,6 +30,21 @@ services:
       - ./compose/mysql/init:/docker-entrypoint-initdb.d/
     ports:
       - "3305:3305"
+    restart: always
+
+  mysql2:
+    image: mysql:5.7
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+      - MYSQL_DATABASE=maple
+      - MYSQL_USER=dbuser
+      - MYSQL_PASSWORD=riu405405
+    volumes:
+      - mysql_vol2:/var/lib/mysql:rw
+      - ./compose/mysql2/conf/my.cnf:/etc/mysql/my.cnf
+      - ./compose/mysql2/init:/docker-entrypoint-initdb.d/
+    ports:
+      - "3304:3304"
     restart: always
 
   web:
