--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 volumes:
   mysql_vol:
   mysql_vol2:
+  mysql_vol3:
   redis_vol:
   media_vol:
 
@@ -19,6 +20,7 @@ services:
 
   mysql:
     image: mysql:5.7
+    container_name: maple_mysql_1
     environment:
       - MYSQL_ROOT_PASSWORD=123456
       - MYSQL_DATABASE=maple
@@ -34,6 +36,7 @@ services:
 
   mysql2:
     image: mysql:5.7
+    container_name: maple_mysql_2
     environment:
       - MYSQL_ROOT_PASSWORD=123456
       - MYSQL_DATABASE=maple
@@ -45,6 +48,22 @@ services:
       - ./compose/mysql2/init:/docker-entrypoint-initdb.d/
     ports:
       - "3304:3304"
+    restart: always
+
+  mysql3:
+    image: mysql:5.7
+    container_name: maple_mysql_3
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+      - MYSQL_DATABASE=maple
+      - MYSQL_USER=dbuser
+      - MYSQL_PASSWORD=riu405405
+    volumes:
+      - mysql_vol3:/var/lib/mysql:rw
+      - ./compose/mysql3/conf/my.cnf:/etc/mysql/my.cnf
+      - ./compose/mysql3/init:/docker-entrypoint-initdb.d/
+    ports:
+      - "3303:3303"
     restart: always
 
   web:
